overflow probllem solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -155,3 +155,12 @@ html::-webkit-scrollbar {
     transform: translateX(100%);
   }
 }
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 100%;
+  position: relative;
+}
